--- a/package.json
+++ b/package.json
@@ -79,9 +79,12 @@
         "postcss": "^8.4.27",
         "prettier": "^2.8.8",
         "replace-in-files-cli": "^2.2.0",
+        "rimraf": "^5.0.5",
         "tailwindcss": "^3.3.3",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.2",
+        "typedoc": "^0.25.4",
+        "typedoc-plugin-markdown": "^3.17.1",
         "typescript": "5.2.2",
         "vitepress": "1.0.0-rc.20"
     },
@@ -118,6 +121,7 @@
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "usehooks-ts": "^2.9.1",
+        "vitepress-plugin-auto-sidebar": "^1.1.0",
         "vitepress-plugin-mermaid": "2.0.10",
         "vue": "^3.3.4",
         "zod": "^3.21.4"
