feat(server-music): Make navidrome always available

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -296,7 +296,7 @@ services:
     networks:
       - music
     profiles:
-      - day
+      - always
     restart: unless-stopped
     volumes:
       - navidrome-data:/data
