build(server-dashboard): Use node commands instead of linux ones

--- a/apps/server/dashboard/project.json
+++ b/apps/server/dashboard/project.json
@@ -13,10 +13,9 @@
             "executor": "nx:run-commands",
             "options": {
                 "commands": [
-                    "rm -rf dist/apps/server/dashboard",
-                    "mkdir -p dist/apps/server/dashboard",
-                    "cp -r apps/server/dashboard/public dist/apps/server/dashboard",
-                    "cp -r libs/branding/assets/img dist/apps/server/dashboard/public"
+                    "rimraf dist/apps/server/dashboard",
+                    "copyfiles apps/server/dashboard/public dist/apps/server/dashboard",
+                    "copyfiles libs/branding/assets/img dist/apps/server/dashboard/public"
                 ]
             }
         }
