--- a/apps/server/renovate/package.json
+++ b/apps/server/renovate/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "renovate",
+    "name": "server-renovate",
     "version": "1.0.0",
     "scripts": {
         "build-image": "docker compose build --push",
