--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ run-renovate:
   script:
     - scp ./apps/server/renovate/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/renovate
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/renovate/docker-compose.yml --env-file ${SSH_PATH}/../.env --env-file ${SSH_PATH}/.env --env-file ${SSH_PATH}/renovate/.env  up --pull always renovate
-  except:
+  only:
     - master
 
 docker:
