ci: only build renovate on master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,8 +81,8 @@ build-renovate:
   <<: *docker
   stage: renovate
   script:
-    - npx nx affected -t build-image --exclude="*,!server-renovate"
-  except:
+    - npx nx build-image server-renovate
+  only:
     - master
 
 run-renovate:
