--- a/Dockerfile.workspace
+++ b/Dockerfile.workspace
@@ -8,9 +8,11 @@ WORKDIR /app
 
 RUN apk add git
 RUN npm i -g @antfu/ni pnpm
+RUN pnpm config set store-dir /tmp/.pnpm-store
+RUN pnpm store path
 
 COPY package.json pnpm-lock.yaml ./
-RUN ni
+RUN --mount=type=cache,target=/tmp/.pnpm-store ni
 
 COPY . .
 
