feat(server-dashboard): edit dashboard with new profile

--- a/apps/server/dashboard/public/conf.yml
+++ b/apps/server/dashboard/public/conf.yml
@@ -68,18 +68,6 @@ sections:
           - docker
           - container
         url: https://justin.konratts.de/portainer
-      - title: Doku
-        icon: doku.svg
-        url: https://just-doku.konratts.de
-      - title: Netdata
-        icon: netdata.png
-        url: https://just-netdata.konratts.de
-      - title: Prometheus
-        icon: prometheus.svg
-        url: https://just-prometheus.konratts.de
-      - title: Grafana
-        icon: grafana.svg
-        url: https://just-grafana.konratts.de
       - title: Linkstack
         icon: linkstack.svg
         url: https://just-links.konratts.de/dashboard
@@ -101,3 +89,20 @@ sections:
         tags:
           - cicd
         url: https://justin.konratts.de/sonar
+  - name: Monitoring
+    displayData:
+      cutToHeight: true
+    icon: ":desktop_computer:"
+    items:
+      - title: Doku
+        icon: doku.svg
+        url: https://just-doku.konratts.de
+      - title: Netdata
+        icon: netdata.png
+        url: https://just-netdata.konratts.de
+      - title: Prometheus
+        icon: prometheus.svg
+        url: https://just-prometheus.konratts.de
+      - title: Grafana
+        icon: grafana.svg
+        url: https://just-grafana.konratts.de
