--- a/apps/server/documentation/Dockerfile
+++ b/apps/server/documentation/Dockerfile
@@ -11,7 +11,8 @@ FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 FROM workspace AS builder
 ARG APP_NAME
-ARG APP_DIR
+
+COPY . .
 RUN npx nx build $APP_NAME
 
 
