--- a/apps/server/scoreboard/Dockerfile
+++ b/apps/server/scoreboard/Dockerfile
@@ -11,13 +11,14 @@ FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 FROM workspace AS builder
 ARG APP_NAME
+
+COPY . .
 RUN npx nx lint $APP_NAME -c production
 RUN npx nx test $APP_NAME -c production
 RUN npx nx build $APP_NAME -c production
 
 
 FROM base AS deps
-WORKDIR /app
 ARG APP_DIR
 
 COPY --from=builder /app/dist/apps/$APP_DIR/package.json ./
@@ -25,7 +26,6 @@ RUN npm i
 
 
 FROM base AS runner
-WORKDIR /app
 ARG APP_DIR
 ENV NODE_ENV production
 
