--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,3 @@
-x-build-args:
-  build: &build-args
-    args:
-      - DOCKER_REGISTRY
-      - ORGANIZATION
-      - PROJECT
-
 services:
   base:
     build:
@@ -13,6 +6,16 @@ services:
 
   workspace:
     build:
-      <<: *build-args
+      args:
+        - DOCKER_REGISTRY
+        - ORGANIZATION
+        - PROJECT
       dockerfile: Dockerfile.workspace
+    entrypoint: sh
     image: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}/workspace
+    network_mode: host
+    tty: true
+    volumes:
+      - .:/app
+      - /app/node_modules
+      - //var/run/docker.sock:/var/run/docker.sock
