fix(server-dashboard): use double quotes for copyfiles command in build

--- a/apps/server/dashboard/project.json
+++ b/apps/server/dashboard/project.json
@@ -14,8 +14,8 @@
             "options": {
                 "commands": [
                     "rimraf -g dist/apps/server/dashboard/**/*",
-                    "copyfiles 'apps/server/dashboard/public/**/*' dist",
-                    "copyfiles -u 3 'libs/branding/assets/img/**/*' dist/apps/server/dashboard/public"
+                    "copyfiles \"apps/server/dashboard/public/**/*\" dist",
+                    "copyfiles -u 3 \"libs/branding/assets/img/**/*\" dist/apps/server/dashboard/public"
                 ]
             }
         }
