fix(server-documentation): fix copyfiles command during dev and build

--- a/apps/server/documentation/project.json
+++ b/apps/server/documentation/project.json
@@ -7,9 +7,9 @@
             "executor": "nx:run-commands",
             "options": {
                 "commands": [
-                    "copyfiles libs/branding/assets/img apps/server/documentation/docs/public",
-                    "copyfiles libs/branding/assets/img/icon.svg apps/server/documentation/docs/public",
-                    "copyfiles libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/img apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/img/icon.svg apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public",
                     "rimraf ./apps/server/documentation/docs/projects",
                     "node ./apps/server/documentation/create-project-docs.mjs && vitepress build --base /docs/ apps/server/documentation/docs"
                 ]
@@ -19,9 +19,9 @@
             "executor": "nx:run-commands",
             "options": {
                 "commands": [
-                    "copyfiles libs/branding/assets/img/logo.svg apps/server/documentation/docs/public",
-                    "copyfiles libs/branding/assets/img/icon.svg apps/server/documentation/docs/public",
-                    "copyfiles libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/img/logo.svg apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/img/icon.svg apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public",
                     "vitepress dev apps/server/documentation/docs"
                 ]
             }
