fix(server-documentation): fix copyfiles command during dev and build

--- a/apps/server/documentation/project.json
+++ b/apps/server/documentation/project.json
@@ -7,7 +7,7 @@
             "executor": "nx:run-commands",
             "options": {
                 "commands": [
-                    "copyfiles -u 4 libs/branding/assets/img apps/server/documentation/docs/public",
+                    "copyfiles -u 4 libs/branding/assets/img/logo.svg apps/server/documentation/docs/public",
                     "copyfiles -u 4 libs/branding/assets/img/icon.svg apps/server/documentation/docs/public",
                     "copyfiles -u 4 libs/branding/assets/favicon/favicon.ico apps/server/documentation/docs/public",
                     "rimraf ./apps/server/documentation/docs/projects",
