chore(deps): update nrwl monorepo to v18 (major)

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PROJECT=monorepo-private
 IMAGE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
 CACHE_DIR=cache
 CACHE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}/${CACHE_DIR}
+
+NX_ADD_PLUGINS=true
