--- a/apps/server/music-downloader/project.json
+++ b/apps/server/music-downloader/project.json
@@ -51,9 +51,8 @@
         },
         "lint": {
             "executor": "@nx/eslint:lint",
-            "outputs": ["{options.outputFile}"],
             "options": {
-                "lintFilePatterns": ["apps/server/music-downloader/**/*.{ts,tsx,js,jsx}"]
+                "lintFilePatterns": ["{projectRoot}/**/*.{ts,tsx,js,jsx}"]
             }
         }
     },
