--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
-        "@nx/cypress": "17.2.8",
-        "@nx/esbuild": "17.2.8",
-        "@nx/eslint": "17.2.8",
-        "@nx/eslint-plugin": "17.2.8",
-        "@nx/jest": "17.2.8",
-        "@nx/js": "17.2.8",
-        "@nx/next": "17.2.8",
-        "@nx/node": "17.2.8",
-        "@nx/react": "17.2.8",
-        "@nx/workspace": "17.2.8",
+        "@nx/cypress": "18.0.4",
+        "@nx/esbuild": "18.0.4",
+        "@nx/eslint": "18.0.4",
+        "@nx/eslint-plugin": "18.0.4",
+        "@nx/jest": "18.0.4",
+        "@nx/js": "18.0.4",
+        "@nx/next": "18.0.4",
+        "@nx/node": "18.0.4",
+        "@nx/react": "18.0.4",
+        "@nx/workspace": "18.0.4",
         "@swc-node/register": "~1.8.0",
         "@swc/cli": "~0.3.0",
         "@swc/core": "1.4.0",
@@ -75,7 +75,7 @@
         "jest": "^29.4.1",
         "jest-environment-jsdom": "^29.4.1",
         "jest-environment-node": "^29.4.1",
-        "nx": "17.2.8",
+        "nx": "18.0.4",
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.27",
         "prettier": "^3.0.0",
@@ -101,7 +101,7 @@
         "@trpc/client": "^10.35.0",
         "@trpc/next": "^10.35.0",
         "@trpc/server": "^10.35.0",
-        "axios": "^1.0.0",
+        "axios": "^1.6.0",
         "clsx": "^2.0.0",
         "d3": "^7.8.5",
         "dotenv": "^16.1.4",
@@ -109,7 +109,7 @@
         "fastify": "^4.17.0",
         "mermaid": "~9.1.7",
         "moment": "^2.29.4",
-        "next": "14.1.0",
+        "next": "^14.1.0",
         "next-auth": "^4.24.5",
         "node-cron": "^3.0.2",
         "pg": "^8.11.1",
