--- a/apps/server/dashboard/Dockerfile
+++ b/apps/server/dashboard/Dockerfile
@@ -11,9 +11,11 @@ FROM $DOCKER_REGISTRY/$ORGANIZATION/$PROJECT/workspace AS workspace
 
 FROM workspace AS builder
 ARG APP_NAME
+ARG APP_DIR
 
 COPY . .
 RUN npx nx build $APP_NAME
+RUN ls /app/dist/apps/$APP_DIR
 
 
 FROM lissy93/dashy:latest
