--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -153,6 +153,7 @@ server {
 }
 
 server {
+    set_by_lua_block $server_address { return os.getenv("SERVER_ADDRESS") }
     set_by_lua_block $netdata_port { return os.getenv("NETDATA_PORT") }
 
     listen 443 ssl http2;
@@ -162,7 +163,7 @@ server {
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
-        set $upstream server.fritz.box:$netdata_port;
+        set $upstream $server_address:$netdata_port;
         proxy_pass http://$upstream;
     }
 }
