--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,25 +115,17 @@ deploy:
   <<: *ssh
   stage: deploy
   script:
-    # copy compose file and scripts
+    # copy compose file and misc scripts
     - scp ./apps/server/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
     - scp ./libs/server/scripts/misc/*.sh ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
-    # copy system scripts
-    - ssh ${SSH_USER}@${SSH_HOST} mkdir -p /tmp/scripts/cron.d /tmp/scripts/systemd/system
+    # etc scripts
+    - ssh ${SSH_USER}@${SSH_HOST} mkdir -p /tmp/scripts/cron.d
     - scp ./libs/server/scripts/etc/cron.d/* ${SSH_USER}@${SSH_HOST}:/tmp/scripts/cron.d
-    - scp ./libs/server/scripts/etc/systemd/system/* ${SSH_USER}@${SSH_HOST}:/tmp/scripts/systemd/system
-    # change system-script ownership
-    - ssh ${SSH_USER}@${SSH_HOST} sudo chown root:root /tmp/scripts/cron.d/*
-    - ssh ${SSH_USER}@${SSH_HOST} sudo chown root:root /tmp/scripts/systemd/system/*
-    # move system-scripts
-    - ssh ${SSH_USER}@${SSH_HOST} sudo mv /tmp/scripts/cron.d/* /etc/cron.d/
-    - ssh ${SSH_USER}@${SSH_HOST} sudo mv /tmp/scripts/systemd/system/* /etc/systemd/system/
-    # reload systemd
-    - ssh ${SSH_USER}@${SSH_HOST} sudo systemctl daemon-reload
+    - ssh ${SSH_USER}@${SSH_HOST} chown root:root /tmp/scripts/cron.d/*
+    - ssh ${SSH_USER}@${SSH_HOST} mv /tmp/scripts/cron.d/* /etc/cron.d/
     # pull and run docker containers
     - ssh ${SSH_USER}@${SSH_HOST} docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD} ${DOCKER_REGISTRY}
-    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml pull
-    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml --profile always --profile day up -d --remove-orphans
+    - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml up -d --pull always --remove-orphans
   only:
     - master
   resource_group: single
