--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,15 +115,16 @@ deploy:
   <<: *ssh
   stage: deploy
   script:
-    # copy compose file and misc scripts
-    - scp ./apps/server/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
+    # copy misc scripts
     - scp ./libs/server/scripts/misc/*.sh ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
-    # etc scripts
+    - ssh ${SSH_USER}@${SSH_HOST} chmod +x ${SSH_PATH}/*.sh
+    # cron
     - ssh ${SSH_USER}@${SSH_HOST} mkdir -p /tmp/scripts/cron.d
     - scp ./libs/server/scripts/etc/cron.d/* ${SSH_USER}@${SSH_HOST}:/tmp/scripts/cron.d
     - ssh ${SSH_USER}@${SSH_HOST} chown root:root /tmp/scripts/cron.d/*
     - ssh ${SSH_USER}@${SSH_HOST} mv /tmp/scripts/cron.d/* /etc/cron.d/
-    # pull and run docker containers
+    # copy compose file, pull and run docker containers
+    - scp ./apps/server/docker-compose.yml ${SSH_USER}@${SSH_HOST}:${SSH_PATH}/
     - ssh ${SSH_USER}@${SSH_HOST} docker login -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD} ${DOCKER_REGISTRY}
     - ssh ${SSH_USER}@${SSH_HOST} docker compose -f ${SSH_PATH}/docker-compose.yml up -d --pull always --remove-orphans
   only:
