fix(docs): test build command with quotes in docker

--- a/apps/server/documentation/doc-projects.json
+++ b/apps/server/documentation/doc-projects.json
@@ -1,6 +1,6 @@
 [
     {
         "name": "monorepo-private",
-        "paths": ["./apps", "./libs"]
+        "paths": ["./apps", "./libs", "./docs"]
     }
 ]
