--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
         "@nx/next": "18.0.4",
         "@nx/node": "18.0.4",
         "@nx/react": "18.0.4",
+        "@nx/vite": "18.0.4",
+        "@nx/web": "18.0.4",
         "@nx/workspace": "18.0.4",
+        "@sveltejs/vite-plugin-svelte": "^3.0.2",
         "@swc-node/register": "~1.8.0",
         "@swc/cli": "~0.3.9",
         "@swc/core": "1.4.2",
@@ -57,6 +60,7 @@
         "@types/react-dom": "18.2.19",
         "@typescript-eslint/eslint-plugin": "7.0.2",
         "@typescript-eslint/parser": "7.0.2",
+        "@vitest/ui": "^1.0.4",
         "autoprefixer": "^10.4.17",
         "babel-jest": "^29.7.0",
         "copyfiles": "^2.4.1",
@@ -81,13 +85,17 @@
         "prettier": "^3.2.5",
         "replace-in-files-cli": "^2.2.0",
         "rimraf": "^5.0.5",
+        "svelte": "^4.2.11",
+        "svelte-check": "^3.6.4",
         "tailwindcss": "^3.4.1",
         "ts-jest": "29.1.2",
         "ts-node": "10.9.2",
         "typedoc": "^0.25.8",
         "typedoc-plugin-markdown": "^3.17.1",
         "typescript": "5.3.3",
-        "vitepress": "1.0.0-rc.44"
+        "vite": "^5.1.3",
+        "vitepress": "1.0.0-rc.44",
+        "vitest": "^1.3.1"
     },
     "dependencies": {
         "@fastify/swagger": "^8.14.0",
